...
    "Launch.NewDocument": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Create Document"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "書類を作成"
...
    "Toolbar.More": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "More"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "その他"
...
    "Toolbar.ViewMode": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "View"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "表示"
...
