...
        spellCheckingType = .no
        smartQuotesType = .no
        smartDashesType = .no
        smartInsertDeleteType = .no
        inlinePredictionType = .no
        isFindInteractionEnabled = true
        accessibilityIdentifier = "codeText"
    }

    required init?(coder: NSCoder) {
        fatalError("init(coder:) is not used")
    }
}
...
